add default validation function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,9 @@
         "friday",
         "Funcion",
         "idkey",
+        "IRRITACION",
         "jkjk",
+        "juli",
         "Junan",
         "Junán",
         "kdlskdlskdskdñskdlskdsññdkslkdñskdslkdsñ",
