update check add medical test data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "aqui",
         "bcoreos",
+        "cariespiezas",
         "contñ",
         "contrase",
         "correomao",
@@ -15,6 +16,7 @@
         "Funcion",
         "idkey",
         "IRRITACION",
+        "ISOTRETINOINA",
         "jkjk",
         "juli",
         "Junan",
