update module: model -add radio Genero -add input Phone

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "friday",
         "Funcion",
         "idkey",
+        "inuse",
         "IRRITACION",
         "ISOTRETINOINA",
         "jkjk",
