update module: model -update test object -refactor input, remove FrontendStaticCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "IRRITACION",
         "ISOTRETINOINA",
         "jkjk",
+        "Joaquina",
         "juli",
         "Junan",
         "Junán",
@@ -37,6 +38,7 @@
         "rozal",
         "sdlksññs",
         "selec",
+        "tablex",
         "tambien",
         "textnum",
         "textnumcode",
