update module: model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "ferr",
         "friday",
         "Funcion",
+        "gatito",
         "idkey",
         "inuse",
         "IRRITACION",
