update module: model remove "fmt" "regexp", rutNormalice and Normalice functions and pkgs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "tambien",
         "textnum",
         "textnumcode",
-        "textsearch"
+        "textsearch",
+        "tílde"
     ]
 }
