update module: model fix dataAge error message, css width age number

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "aqui",
         "bcoreos",
         "cariespiezas",
+        "CIRUGIAS",
         "contñ",
         "contrase",
         "correomao",
